# pmp

./: README.md  __init__.py  pmp_gui.py  pyproject.toml
Documentation/: PMP_architecture_and_roadmap.txt  readme.txt  repostruc.txt
comms/: __init__.py  link_mars.py
core/: bodies.py
edl/: __init__.py  edl_1d.py
legacy/: ADCS_0.2a.py  CFD_0.2.py  __init__.py  antenna_0.4.py  comm1d.py  hex_v1.2a.py  orbit_1.4c.py  orbiter_EPS_0.1.py  probe_sim_v0.3a.py  reentry_2.1c.py  season_calc.py
missions/: __init__.py
missions/magpie/: __init__.py
power/: __init__.py  orbiter_eps.py  probe_env.py
seasons/: __init__.py  mars_seasons.py
trajectory/: adcs.py  transfer.py
